js/js.translator/testData/incremental/invalidation/externalOverriddenProperty/lib1/lib.kt
external interface Foo {
    val value: String
}

data class FooImpl(override val value: String): Foo